src/app/layout/header/header.component.scss
@use 'variables' as *;

:host ::ng-deep .p-menu {
  min-width: 175px !important;
  width: auto !important;
  margin-top: 0 !important; /* Remove margin since we're setting explicit position */

  .p-menu-item-content:hover {
    color: $primary-color !important;

    .p-menu-item-icon {
      color: $primary-color !important;
    }
  }
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 20px;
  height: 48px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background: rgba(22, 22, 22, 0.8);
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  transition: transform 0.3s ease-in-out;

  &.header-visible {
    transform: translateY(0);
  }

  &.header-hidden {
    transform: translateY(-100%);
  }

  .logo-description-container {
    display: flex;
    align-items: center;
    width: 100%;
  }

  .logo-description {
    display: flex;
    align-items: center;
    height: 24px;
    font-weight: 700;
    gap: 12px;

    button {
      background: transparent;
      border: none;
      padding: 0;
      cursor: pointer;
      display: flex;
      align-items: center;

      .logo {
        font-family: 'New Rocker', cursive;
        display: flex;
        align-items: center;
        color: $primary-color;
        font-weight: 600;
        font-size: 22px;
      }
    }

    .divider {
      height: 100%;
      width: 1px;
      background-color: $surface-border;
    }
  }

  .container {
    display: flex;
    align-items: center;
    width: auto;
    height: 40px;
    justify-content: flex-end;
    gap: 12px;
    line-height: 150%;
    user-select: none;

    app-user-avatar {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }

  @media (max-width: 380px) {
    padding-left: 8px;
  }

  @media (max-width: 330px) {
    padding-left: 6px;
  }
}

